infrastructure/k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: science-map-staging
  labels:
    name: science-map-staging
    environment: staging
